[tool.poetry]
name = "rrt"
version = "0.1.0"
description = "Simple implementation of a Rapidly Exploring Random Tree using Dubins path as an expansion method"
authors = ["FelicienC <cantalloubef@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
shapely = "^2.0.3"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
